[package]
name = "oxideav-ogg"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-ogg"
authors = ["Mark Karpeles"]
description = "Pure-Rust Ogg container (pages, packets, CRC32) for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-ogg"
keywords = ["multimedia", "ogg", "container", "demuxer", "pure-rust"]
categories = ["multimedia::encoding", "parser-implementations"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
oxideav-container = "0.0"
