[package]
name = "oxideav-ogg"
version = "0.1.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-ogg"
authors = ["Mark Karpeles"]
description = "Pure-Rust Ogg container (pages, packets, CRC32) for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-ogg"
keywords = ["multimedia", "ogg", "container", "demuxer", "pure-rust"]
categories = ["multimedia::encoding", "parser-implementations"]

[dependencies]
oxideav-core = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
