[package]
name = "oxideav-ogg-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# `oxideav-ogg` is the RFC 3533 page-framing + packet-reassembly +
# multi-stream demuxer / muxer. Its public surface — `Page::parse`,
# `demux::open` / `open_concrete` / `open_indexed`, the per-stream
# `Demuxer::next_packet` drain, granule-position `seek_to`, and the
# Skeleton 3.0 / 4.0 packet parsers — has to be panic-free on
# arbitrary attacker bytes: a fuzz crash is a fix, never an
# `#[ignore]`. This fuzz crate hammers all five entry points under
# the clean-room wall (spec + our own source only).

[dependencies]
libfuzzer-sys = "0.4"
oxideav-core = "0.1"

[dependencies.oxideav-ogg]
path = ".."

[lib]
name = "oxideav_ogg_fuzz"
path = "src/lib.rs"

# Prevent this fuzz package from being pulled into the umbrella
# workspace at `crates/*` glob-resolve time.
[workspace]
members = ["."]

[profile.release]
debug = 1

# ------------------------------------------------------------------
# Fuzz targets.
# ------------------------------------------------------------------

# Target 1: page-layer parser. `Page::parse` MUST return a `Result`
# for any byte sequence — never panic, never overflow, never index
# out of bounds. The harness calls `parse` at every byte offset so
# every possible (header, segment table, body) framing alignment is
# exercised against attacker bytes.
[[bin]]
name = "page_parse"
path = "fuzz_targets/page_parse.rs"
test = false
doc = false

# Target 2: full demuxer + recapture. Drive arbitrary bytes through
# `demux::open` and pull packets via `Demuxer::next_packet` until
# EOF or error. This exercises the BOS-section walk, codec sniffing,
# Xiph metadata parsing, page-loss detection, framing-flag
# consistency check, and the RFC 3533 §3 / §6 field 1 resync /
# capture-pattern recovery — all on attacker bytes. The counters
# (`hole_count`, `framing_error_count`, `resync_count`) are queried
# afterwards to exercise their accessors too.
[[bin]]
name = "demux_recapture"
path = "fuzz_targets/demux_recapture.rs"
test = false
doc = false

# Target 3: granule walk + bisection seek. Open the bytes via
# `open_concrete`, build the dense seek index, then drive `seek_to`
# across every stream at granule values derived from the input. The
# index build path scans every page header in the file and the
# bisection path falls back to byte-level scanning, so both granule
# accounting and the byte-level scanner are fuzzed.
[[bin]]
name = "granule_walk"
path = "fuzz_targets/granule_walk.rs"
test = false
doc = false

# Target 4: continued-packet edge surface. Targets 1-3 feed fully
# arbitrary bytes; most random inputs are rejected at the BOS walk and
# never reach the per-stream reassembly machinery (continued-flag
# cross-check, 255-lacing partial-packet buffering, `pending_valid`
# orphan-drop, page-loss hole accounting). This target *constructs* a
# valid Vorbis header section plus N fuzz-shaped body pages — lacing
# pattern, payload size around the 255-segment boundary, continued bit,
# sequence-number delta, granule delta all attacker-driven — so the
# reassembly machinery itself gets hammered. A single-byte global
# mutation drives CRC-failure resync on top of the structural fuzz.
[[bin]]
name = "continued_edge"
path = "fuzz_targets/continued_edge.rs"
test = false
doc = false

# Target 5: Skeleton 3.0 / 4.0 packet parsers. Targets 1-4 feed
# arbitrary bytes or a Vorbis-shaped construction; neither path
# reliably reaches `skeleton::FisHead::parse` /
# `skeleton::FisBone::parse` / `skeleton::SkelIndex::parse`
# (random buffers virtually never begin with `fishead\0` /
# `fisbone\0` / `index\0`). This target calls each parser
# directly on the fuzz buffer, roundtrips the result through
# `to_bytes`, hammers `read_vbi_u64` / `write_vbi_u64` with
# fuzz-derived u64s, and also wraps the buffer in a synthetic
# Skeleton BOS page fed to `demux::open_concrete` so the
# auto-detect path is exercised. The 42-byte `index\0` packet
# with attacker-controlled `n_keypoints` is the priority case —
# the parser must not pre-allocate based on the on-wire count
# without bounding it by remaining input.
[[bin]]
name = "skeleton_parse"
path = "fuzz_targets/skeleton_parse.rs"
test = false
doc = false

# Target 6: buffer-level framing layer (`framing::PageWriter` /
# `PacketAssembler` / `parse_pages` / `pages_to_packets`). Write mode
# drives fuzz-shaped packet sequences through PageWriter and asserts
# HARD round-trip invariants (BOS/EOS placement, contiguous sequence
# numbers, continued-flag/open-packet agreement, byte-exact packet
# reassembly); read mode feeds hostile bytes to the strict layer and
# checks a parse -> serialize -> parse fixpoint on every accepted page.
[[bin]]
name = "framing_layer"
path = "fuzz_targets/framing_layer.rs"
test = false
doc = false

# Target 7: mux -> demux round-trip. Fuzz-shaped packet sequences
# (1-2 streams, Vorbis/Opus extradata reconstruction, spanning
# packets, soft page target, optional chained second link) go through
# the muxer and MUST come back from the demuxer byte-identical, in
# order, on the right public stream, with all damage counters at zero
# and the link count matching. Self-consistency is a valid oracle
# under the clean-room wall — both sides are this crate.
[[bin]]
name = "mux_roundtrip"
path = "fuzz_targets/mux_roundtrip.rs"
test = false
doc = false

# Target 8: chained + grouped stream graphs. Constructs whole
# physical-stream graphs (up to 3 links x 2 streams, serials from a
# 4-entry pool so RFC 3533 §4 unique-serial violations are common,
# optional Skeleton control section, fuzz flags/seq/granules,
# corruption + truncation) and asserts the range contracts of the
# link/serial/track accessors plus the track-order bijection, across
# both the incremental drain and the build_seek_index full-file scan.
[[bin]]
name = "chain_graph"
path = "fuzz_targets/chain_graph.rs"
test = false
doc = false

# Target 9: hostile-graph seek storm. Valid-CRC pages whose
# granules are non-monotonic / -1 / near-overflow, plus an optional
# Skeleton whose fisbone and 4.0 index actively lie (granuleshift up
# to 255, zero/negative rates and denominators, keypoints pointing
# past EOF), stormed through seek_to / seek_to_with_preroll /
# seek_to_keyframe with build_seek_index interleaved. Panic-freedom
# plus in-range post-seek packet delivery are the oracles.
[[bin]]
name = "seek_hostile"
path = "fuzz_targets/seek_hostile.rs"
test = false
doc = false

# Target 10: whole-file conformance validator
# (`oxideav_ogg::validate::validate`). The validator promises to never
# panic on arbitrary bytes and to keep its memory bounded (MAX_ISSUES
# retention cap); this target holds it to that, plus determinism (a
# second walk over the same bytes must produce identical counts) and a
# panic-free Display rendering of the report.
[[bin]]
name = "validate"
path = "fuzz_targets/validate.rs"
test = false
doc = false
